change route to group image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navigation-header">
             <button class="navigation-header__item navigation-header--close-image"></button>
             <a class="navigation-header__item">
-                <img src="/images/Group.png" alt="Логотип компании">
+                <img src="./images/Group.png" alt="Логотип компании">
             </a>
             <button class="navigation-header__item navigation-header--search-image"></button>  
         </nav>
