add changes in CSS styles

--- a/index.html
+++ b/index.html
@@ -3,49 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="sidebar-menu,CPS-maket, figma">
+    <meta name="keywords" content="sidebar-menu, CPS-maket, figma">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <title>CPS-maket-sidebar-menu</title>
 </head>
 <body>
     <section class="sidebar-container">
-        <nav class="navigation-header">
-            <button class="navigation-header__item navigation-header--close-image"></button>
-            <a class="navigation-header__item">
-                <img src="./images/Group.png" alt="Логотип компании">
-            </a>
-            <button class="navigation-header__item navigation-header--search-image"></button>  
-        </nav>
-        <nav class="navigation-menu">
-            <ul class="menu-list">
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Ремонт техники</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Услуги и сервисы</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Корпоративным клиентам</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Продавцам техники</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Партнерам</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Производителям</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Наши сервисные центры</a>
-                </li>
-                <li class="menu-list__item">
-                    <a class="menu-list__link" href="/">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <footer class="info-block">
+        <section class="top-block">
+            <header class="navigation-header">
+                <button class="navigation-header__item navigation-header--close-image"></button>
+                <a class="navigation-header__item">
+                    <img src="./images/Group.png" alt="Логотип компании">
+                </a>
+                <button class="navigation-header__item navigation-header--search-image"></button>  
+            </header>
+            <main class="navigation-menu">
+                <ul class="menu-list">
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Ремонт техники</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Услуги и сервисы</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Корпоративным клиентам</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Продавцам техники</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Партнерам</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Производителям</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Наши сервисные центры</a>
+                    </li>
+                    <li class="menu-list__item">
+                        <a class="menu-list__link" href="/">Контакты</a>
+                    </li>
+                </ul>
+            </main>
+        </section>
+        <footer class="bottom-block">
             <nav class="contact-buttons">
                 <button class="contact-buttons__item contact-buttons--call-image"></button>
                 <button class="contact-buttons__item contact-buttons--chat-image"></button>
